k8s/talos/apps/qbittorrent-vpn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent-vpn
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
