k8s/talos/apps/qbittorrent-vpn/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent-vpn
      app.kubernetes.io/instance: qbittorrent-vpn
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: servarr
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: qbittorrent-vpn
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: authentik
              app.kubernetes.io/component: server
      ports:
        - protocol: TCP
          port: 8081
